Fix obsolate new Integer/Long/Double/Byte call. Use valueOf() instead.
Signed-off-by: Ying-Chun Liu (PaulLiu) <paulliu@debian.org>